Fix icon overlap issue on error cards on mobile

--- a/src/styles/Card.module.scss
+++ b/src/styles/Card.module.scss
@@ -10,6 +10,7 @@
 
   &.error {
     padding: 1.5em;
+    padding-right: 3.5em;
 
     p {
       color: var(--red);
